--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,41 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-title>
-      Blank
+      Trending Movies
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  @if (isLoading) {
+    <ion-list>
+      @for (i of dummyArray; track i) {
+        <ion-item lines="none" clss="ion-padding-bottom">
+          <ion-avatar slot="start">
+            <ion-skeleton-text></ion-skeleton-text>
+          </ion-avatar>
+          <ion-skeleton-text animated style="height: 40px" />
+        </ion-item>
+      }
+    </ion-list>
+  } @else if (error){
+    <ion-alert header="Error" [message]="error" isOpen="true" [buttons]="['Ok']" />
+  }
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ion-list>
+    @for (item of movies; track item.id) {
+      <ion-item>
+        <ion-avatar slot="start">
+          <img [src]="imageBaseUrl + '/w92' + item.poster_path" alt="poster" />
+          <ion-skeleton-text></ion-skeleton-text>
+        </ion-avatar>
+        <ion-label class="ion-text-wrap">
+          <h3>{{ item.title }}</h3>
+          <p>{{ item.release_date | date:'y'}}</p>
+        </ion-label>
+        <ion-skeleton-text animated style="height: 40px" />
+      </ion-item>
+    }
+  </ion-list>
+
 </ion-content>
