--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -24,18 +24,29 @@
 
   <ion-list>
     @for (item of movies; track item.id) {
-      <ion-item>
+      <ion-item button [routerLink]="['/details', item.id]">
         <ion-avatar slot="start">
           <img [src]="imageBaseUrl + '/w92' + item.poster_path" alt="poster" />
-          <ion-skeleton-text></ion-skeleton-text>
         </ion-avatar>
+
         <ion-label class="ion-text-wrap">
           <h3>{{ item.title }}</h3>
           <p>{{ item.release_date | date:'y'}}</p>
         </ion-label>
-        <ion-skeleton-text animated style="height: 40px" />
+
+        <ion-badge slot="end"> {{ item.vote_average }}</ion-badge>
       </ion-item>
+    } @empty {
+      @if (!isLoading){
+        <ion-item lines="none">
+          <ion-label class="ion-text-center">No movies found</ion-label>
+        </ion-item>
+      }
     }
   </ion-list>
+
+  <ion-infinite-scroll (ionInfinite)="loadMore($event)">
+    <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="Loading more data"></ion-infinite-scroll-content>
+  </ion-infinite-scroll>
 
 </ion-content>
