--- a/src/app/home-defer/home-defer.page.html
+++ b/src/app/home-defer/home-defer.page.html
@@ -1,13 +1,76 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>homeDefer</ion-title>
+  <ion-toolbar color="primary">
+    <ion-title>
+      Trending Movies
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">homeDefer</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <!-- @if (isLoading) {
+    <ion-list>
+      @for (i of dummyArray; track i) {
+        <ion-item lines="none" clss="ion-padding-bottom">
+          <ion-avatar slot="start">
+            <ion-skeleton-text></ion-skeleton-text>
+          </ion-avatar>
+          <ion-skeleton-text animated style="height: 40px" />
+        </ion-item>
+      }
+    </ion-list>
+  } @else if (error){
+    <ion-alert header="Error" [message]="error" isOpen="true" [buttons]="['Ok']" />
+  } -->
+
+  <!-- we now use the @defer directive to only render the list and infinite scroll when we are not loading anymore. -->
+  @defer (when !isLoading){
+    <ion-list>
+      @for (item of movies; track item.id) {
+        <ion-item button [routerLink]="['/details', item.id]">
+          <ion-avatar slot="start">
+            <img [src]="imageBaseUrl + '/w92' + item.poster_path" alt="poster" />
+          </ion-avatar>
+  
+          <ion-label class="ion-text-wrap">
+            <h3>{{ item.title }}</h3>
+            <p>{{ item.release_date | date:'y'}}</p>
+          </ion-label>
+  
+          <ion-badge slot="end"> {{ item.vote_average }}</ion-badge>
+        </ion-item>
+      } @empty {
+        @if (!isLoading){
+          <ion-item lines="none">
+            <ion-label class="ion-text-center">No movies found</ion-label>
+          </ion-item>
+        }
+      }
+    </ion-list>
+  
+    <ion-infinite-scroll (ionInfinite)="loadMore($event)">
+      <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="Loading more data"></ion-infinite-scroll-content>
+    </ion-infinite-scroll>
+
+    <!-- @placeholder directive to show the skeleton items while we are loading. -->
+  } @placeholder {
+ <ion-list class="ion-padding-top">
+      @for (i of dummyArray; track i) {
+        <ion-item lines="none" clss="ion-padding-bottom">
+          <ion-avatar slot="start">
+            <ion-skeleton-text></ion-skeleton-text>
+          </ion-avatar>
+          <ion-skeleton-text animated style="height: 40px" />
+        </ion-item>
+      }
+    </ion-list>
+
+    <!-- @error directive is used to show the error message -->
+  } @error {
+    <ion-alert header="Error" [message]="error" isOpen="true" [buttons]="['Ok']" />
+
+    <!-- @loading directive is used to show a transition message while we go from placeholder to deferred block. -->
+  } @loading (minimum 2s) {
+    I AM TRANSITIONING
+  }
+
 </ion-content>
